# math_for_developers

./: .gitignore  CMakeLists.txt  README.md  cadastro.html  index.html
content/: shaders.txt
content/shaders/: model.fs  pass.vs
src/: CMakeLists.txt
src/game/: game.cpp  game.h  main.cpp
src/math/: aabb.h  collision.cpp  collision.h  euler.cpp  euler.h  maths.h  vector.cpp  vector.h
src/renderer/: application.cpp  application.h  keys.h  renderer.cpp  renderer.h  renderingcontext.cpp  shaders.cpp  stanfordbunny.cpp
